--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Curriculum vitae Breno Macêdo" />
     <meta name="keywords" content="curriculo, vitae, git, github" />
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="images/breno.jpg">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
